small fixes with text alignment in join-our-network block desktop

--- a/assets/css/components/_card-responsive.scss
+++ b/assets/css/components/_card-responsive.scss
@@ -27,7 +27,7 @@
   // EOL: @media(min-width: 300px)
 
   @media(min-width: 600px) {
-    max-width: 500px;
+    max-width: 450px;
 
     .card-body {
       padding: 20px 20px 16px;
